# pydantic-ai-playground

./: .gitignore  debug_output.html  deepseek-pydantagent  pydantic-google-agent - Shortcut.lnk  pyproject.toml  r1-researcher.md  search_results.json  weather_agent_pydantic.py
_pydantic-ai-context/: README.md  agents.md  dependencies.md  examples.py  graphs.md  introduction.md  messages.md  models.md  monitoring.md  multi_agent.md  results.md  testing.md  tools.md
_pydantic-ai-context/_examples/chat_app/: README.md  chat_app.ts
_pydantic-ai-context/_examples/question_graph/: README.md
_pydantic-ai-context/_examples/rag/: README.md
_pydantic-ai-context/_examples/stream_whales/: README.md
_pydantic-ai-context/_examples/weather_agent/: README.md  __init__.py  weather_agent.py  weather_agent_gradio.py
pydantic_googleaddon-main/: __init__.py  example_usage.py  test.py  web_tool.py
pydantic_googleaddon-main/src/: custom_instructions.txt  pydantic_googleaddon.md
